# pickle

./: .gitignore  AGENTS.md  CLAUDE.md  LOGBOOK.md  README.md  TODO.md  logbook.md  todo.md
docs/: architecture.md  clc.md  codegen.md  commands.md  domain.md
docs/superpowers/plans/: 2026-04-19-lane-a-design-system-unification.md
docs/superpowers/specs/: 2026-04-19-lane-a-design-system-unification-design.md
frontend/: index.html
frontend/static/: app.js  pin_descriptions.js  style.css
frontend/static/app/: 00-core.js  01-reservation-policy.js  01-reservations.js  02-peripheral-view.js  02-view-model.js  03-pin-view.js  04-editor-state.js  04-interactions.js  05-clc-designer.js  05-clc-model.js  05-clc-schematic.js  05-codegen.js  05-compile-check.js  05-config-files.js  05-device-config.js  05-device-info.js  05-settings.js  06-shell.js  07-verification-model.js  07-verification-render.js  07-verification.js  08-bootstrap.js  config.js  model.js
frontend/static/app/ui/: 00-namespace.js  dropdown.js  form.js  modal.js  status-bar.js  tab-strip.js  toast.js  tooltip.js
frontend/static/styles/: 00-foundation.css  01-pin-code.css  02-package-config.css  03-verify-clc.css  04-shell-layout.css  05-peripheral-responsive.css
frontend/static/styles/components/: button.css  dropdown-menu.css  empty-state.css  form.css  modal.css  status-bar.css  tab-strip.css  toast.css  (+2 more)
frontend/tests/: clc-model.test.js  clc-schematic.test.js  config.test.js  model.test.js  reservation-policy.test.js  structure.test.js  verification-model.test.js  view-model.test.js
frontend/tests/ui/: dropdown.test.js  form.test.js  modal.test.js  namespace.test.js  status-bar.test.js  tab-strip.test.js  toast.test.js  tooltip.test.js
scripts/: release-app.sh  validate.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: live_verify.rs  oxidize_pdf_extract_pages.rs  pdf_extract_pages.rs  pdf_oxide_extract_pages.rs  pdfium_dump_bookmarks.rs  pdfium_extract_pages.rs  qpdf_extract_multi_ranges.rs  qpdf_extract_pages.rs  resolve_datasheet.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  part_profile.rs  settings.rs
src-tauri/src/codegen/: fuses.rs  generate.rs  generate_clc.rs  generate_ports.rs  generate_pps.rs  generate_single_file.rs  generate_support.rs  generate_types.rs  mod.rs  oscillator.rs
src-tauri/src/codegen/generate/: tests.rs
src-tauri/src/codegen/oscillator/: ak.rs  legacy.rs  model.rs  tests.rs
src-tauri/src/commands/: catalog.rs  devices.rs  dialogs.rs  keychain.rs  settings_state.rs  support.rs  toolchain.rs  types.rs  verification.rs  verification_support.rs
src-tauri/src/commands/verification/: lookup.rs  overlay.rs  run.rs
src-tauri/src/parser/: datasheet_fetcher.rs  dfp_datasheet.rs  dfp_manager.rs  dfp_paths.rs  dfp_store.rs  edc_parser.rs  mod.rs  pack_index.rs  pinout_verifier.rs  verifier_cache.rs  verify_compare.rs  verify_openai_stream.rs  verify_overlay.rs  verify_pdf.rs  verify_progress.rs  verify_prompt.rs  verify_provider.rs  verify_provider_anthropic.rs  verify_provider_openai.rs  verify_provider_schema.rs
src-tauri/tests/: integration.rs
tests/: branding-hygiene.test.js  readme.test.js
tests/fixtures/: DSPIC33CK64MP102.json
