[package]
name = "pickle"
version = "0.4.2"
edition = "2021"
description = "Pin configurator for Microchip dsPIC33 and PIC24 devices"

[lib]
name = "pickle_lib"
path = "src/lib.rs"

[[bin]]
name = "pickle"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
roxmltree = "0.20"
zip = "2"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
base64 = "0.22"
dirs = "6"
once_cell = "1"
log = "0.4"
tauri-plugin-log = "2"
tempfile = "3"
tauri-plugin-opener = "2.5.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
