[package]
name = "pickle"
version = "0.5.0"
edition = "2021"
description = "Pin configurator for Microchip dsPIC33 and PIC24 devices"

[lib]
name = "pickle_lib"
path = "src/lib.rs"

[[bin]]
name = "pickle"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
roxmltree = "0.20"
zip = "2"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
base64 = "0.22"
dirs = "6"
once_cell = "1"
log = "0.4"
lopdf = "0.40"
oxidize-pdf = { version = "2.4.3", default-features = false, features = ["compression"] }
pdf_oxide = "0.3.20"
pdfium-auto = "0.3.0"
qpdf = { version = "0.3.5", features = ["vendored"] }
tauri-plugin-log = "2"
tempfile = "3"
tauri-plugin-opener = "2.5.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
image = { version = "0.25", default-features = false, features = ["png"] }
pdfium-render = "=0.8.37"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
